[project]
name = "lsst-ctrl-execute"
requires-python = ">=3.11.0,<3.13.0"
description = "Utilities for executing and managing workloads."
license = {text = "BSD 3-Clause License"}
authors = [
    {name="Rubin Observatory Data Management", email="dm-admin@lists.lsst.org"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Astronomy",
]
keywords = ["lsst"]
dependencies = [
    "lsst-ctrl-bps-htcondor>=28.2024.5000; sys_platform == 'linux'",
    "lsst-pex-config",
    "lsst-utils",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "lsst-versions >= 1.3.0",
    "pytest",
    "pytest-xdist",
    "pytest-cov"
]

[project.urls]
"Homepage" = "https://github.com/lsst/ctrl_execute"

[project.scripts]
allocate_nodes = "bin.allocateNodes:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/lsst"]

[tool.hatch.build.targets.wheel.force-include]
"./bin.src" = "bin"

[tool.hatch.version]
path = "python/lsst/ctrl/execute/version.py"
fallback-version = "0.0.0"

[tool.lsst_versions]
write_to = "python/lsst/ctrl/execute/version.py"
